# ou-xml-to-rst

./: pyproject.toml
src/ou_xml_to_rst/: __main__.py
